compiler/src/test/resources/golden/errors/type_neg_non_number.err
error: negation expects a number, got String
  --> type_neg_non_number.dawn:1:21
  |
1 | fn f() -> String = -"x"
  |                     ^^^
